# recruit-ai-mcp

./: .env.example  .gitignore  AGENTS.ko.md  AGENTS.md  AI_FULL_INSTALL_GUIDE.ko.md  AI_FULL_INSTALL_GUIDE.md  AI_INSTALL_SCENARIOS.md  AI_NPX_INSTALL_GUIDE.md  AI_START_HERE.md  AI_USER_TEST_GUIDE.md  CLAUDE.md  LICENSE  README.ko.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  staging-smoke.yml
atlas/chart_ready/: customer_themes.v1.json  pipeline_trend.v1.json  weekly_pipeline_review.v1.json
atlas/charts/: customer_themes.v1.json  pipeline_trend.v1.json  weekly_pipeline_review.v1.json
atlas/vector_indexes/: deal_summary_vector.v1.json
config/: defaults.yaml
docs/: README.md  architecture.md  atlas-charts.md  backlog.md  baseline.md  bootstrapper-contract.md  bootstrapper-fresh-smoke.md  config-profiles.md  customization-recipes.md  distribution-plan.md  extending.md  lesson-learned.md  metrics.md  mongodb-atlas-pro.md  mvp-readiness.md  pro-fallback-errors.md  public-demo-script.md  qualification-framework-v2.md  query-audit.md  recruiting-domain-model.md  release-publish-checklist.md  reports.md  status.md  storage-backends.md  tool-surfaces.md
infra/mongodb-atlas/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  provider.tf  variables.tf  versions.tf
mcpb/: .mcpbignore  README.md  deal-intel-mcp-0.2.1.mcpb  deal-intel-mcp-0.2.2.mcpb  manifest.json  recruit-ai-mcp-0.1.0.mcpb
mcpb/server/: launcher.py
npm/: README.md  package.json
npm/mcpb/: recruit-ai-mcp-0.1.0.mcpb  recruit-ai-mcp-0.2.3.mcpb
release/: README.md
release/latest/: checksums.txt  deal-intel-mcp-0.1.15.mcpb  deal-intel-mcp-0.2.1.mcpb  deal-intel-mcp-0.2.3.mcpb  recruit-ai-mcp-0.1.0.mcpb
scripts/: atlas_charts_customer_themes.json  smoke_test.py  validate_recruiting_smoke.py
src/deal_intel/: _context.py  _env.py  atlas_vector_indexes.py  chart_ready_contracts.py  chart_ready_refresh.py  cli.py  config_doctor.py  config_profiles.py  config_writer.py  errors.py  mcp_server.py  mongo_contracts.py  mongo_doctor.py  product_context.py  profile_smoke.py  profile_smoke_matrix.py  qualification_config.py  runtime.py  tool_surfaces.py  usage.py  user_memory.py  workflow_trace.py
tests/: test_add_interaction.py  test_analytics_snapshots.py  test_analyze_deal.py  test_archived_read_paths.py  test_atlas_charts.py  test_atlas_vector_indexes.py  test_backfill_qualification.py  test_backfill_qualification_reextract.py  test_bootstrapper_skeleton.py  test_chart_ready_contracts.py  test_chart_ready_refresh.py  test_cli_atlas_charts.py  test_cli_config_profiles.py  test_cli_deal_review_smoke.py  test_config_doctor.py  test_config_profiles.py  test_config_writer.py  test_csv_export.py  test_customer_theme_insights.py  test_customer_themes.py  test_dashboard_crosscheck.py  test_data_quality_reporting.py  test_deal_gaps.py  test_deal_lifecycle.py  test_deal_review.py  test_docs_recruit_ai_current.py  test_env_config.py  test_export_data.py  test_export_recruiting_report.py  test_export_report.py  test_get_deal_gaps.py  test_get_metrics.py  test_industry_tag_backfill.py  test_industry_taxonomy.py  test_llm_providers.py  test_local_data_cli.py  test_local_data_migration.py  test_local_sample_backend.py  test_mcpb_manifest.py  test_metric_contract.py  (+41 more)
user_docs/: README.md
user_docs/samples/: evidence-policy.sample.md  metric-tuning-feedback.sample.md  operating-preferences.sample.md  report-review-feedback.sample.md  (+1 more)
(+112 files in other folders)
