[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deal-intel-mcp"
version = "0.1.14"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "pymongo[srv]>=4.7",
    "anthropic>=0.28",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "tzdata>=2024.1",
    "typer>=0.12",
]

[project.optional-dependencies]
embedding = [
    "sentence-transformers>=2.7",
]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[project.scripts]
deal-intel = "deal_intel.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"deal_intel.resources" = ["defaults.yaml", "atlas/charts/*.json", "atlas/vector_indexes/*.json", "mongo/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
