[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deal-intel-mcp"
version = "0.2.2"
description = "Self-owned MCP deal intelligence layer for early B2B teams."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "JrJuni" },
]
keywords = [
    "mcp",
    "sales",
    "crm",
    "b2b",
    "deal-intelligence",
    "mongodb",
    "meddpicc",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0",
    "pymongo>=4.7",
    "dnspython>=2.0",
    "anthropic>=0.28",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pypdf>=4.2",
    "pyyaml>=6.0",
    "tzdata>=2024.1",
    "typer>=0.12",
]

[project.optional-dependencies]
embedding = [
    "sentence-transformers>=2.7",
]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[project.scripts]
deal-intel = "deal_intel.cli:app"

[project.urls]
Homepage = "https://github.com/JrJuni/deal-intel-mcp"
Repository = "https://github.com/JrJuni/deal-intel-mcp"
Issues = "https://github.com/JrJuni/deal-intel-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"deal_intel.resources" = [
    "defaults.yaml",
    "atlas/charts/*.json",
    "atlas/chart_ready/*.json",
    "atlas/vector_indexes/*.json",
    "mongo/*.json",
]
"deal_intel.resources.sample_datasets" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
